deployment/bgd-svc.yaml
---
apiVersion: apps/v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
---
