deployment/deployment-hello-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: test
  labels:
    app: hello-node
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-node
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-node
  namespace: test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: hello-node
        image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
