deployment/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: bgd-bgd.apps.ocpcloudlab.apmt.net
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
